fix(wearable): Hiding processing element when page is not yet visible

--- a/tau/src/css/profile/wearable/changeable/theme-circle/processing.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/processing.less
@@ -2,7 +2,14 @@
 Processing
 ***********************/
 
+.ui-page-active {
+	.ui-processing {
+		opacity: 1;
+	}
+}
+
 .ui-processing {
+	opacity: 0;
 	background-color: @color_processing;
 
 	&.ui-processing-full-size {
